bp-core/main/default/objects/Pitch__c/Pitch__c.object-meta.xml
<CustomObject>
    <label>Pitch</label>
    <nameField>
        <displayFormat>Pitch-{0000}</displayFormat>
        <label>Pitch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pitches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>