bp-core/main/default/objects/Pitch__c/fields/Batter__c.field-meta.xml
<CustomField>
    <fullName>Batter__c</fullName>
    <label>Batter</label>
    <referenceTo>Batter__c</referenceTo>
    <relationshipLabel>Pitches</relationshipLabel>
    <relationshipName>Pitches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>