bp-core/main/default/objects/Pitch__c/fields/Is_Strike__c.field-meta.xml
<CustomField>
    <fullName>Is_Strike__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Strike?</label>
    <type>Checkbox</type>
</CustomField>