bp-core/main/default/objects/Pitch__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type</label>
    <referenceTo>Pitch_Type__c</referenceTo>
    <relationshipLabel>Pitches</relationshipLabel>
    <relationshipName>Pitches</relationshipName>
    <type>Lookup</type>
</CustomField>